scripts/nullness/annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8.txt
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:153: error: [accessing.nullable] accessing a possibly-null array bestSegment
			antibody[offset + i] = bestSegment[i];
			                       ^
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinGA.java:110: error: [argument] incompatible argument for parameter antibodies of BaldwinFitnessFunction.findBestGeneticMatch.
				GeneticMatchResult result = fitnessFunction.findBestGeneticMatch(antigen, antibodies);
				                                                                          ^
  found   : @Initialized @NonNull boolean @Initialized @Nullable [] @Initialized @NonNull []
  required: @Initialized @NonNull boolean @Initialized @NonNull [] @Initialized @NonNull []
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:219: error: [argument] incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
            getCloneHandlerFor(selectedChromosome, null);
                                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:223: error: [argument] incompatible argument for parameter arg1 of IHandler.perform.
                selectedChromosome, null, null);
                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:223: error: [argument] incompatible argument for parameter arg2 of IHandler.perform.
                selectedChromosome, null, null);
                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:396: error: [override.param] Incompatible parameter type for o.
  public boolean equals(Object o) {
                               ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull RankProportionalRouletteSelector
    @Initialized @NonNull boolean equals(@Initialized @NonNull RankProportionalRouletteSelector this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:121: error: [argument] incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
				ICloneHandler cloner = getConfiguration().getJGAPFactory().getCloneHandlerFor(selectedChromosome, null);
				                                                                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:124: error: [argument] incompatible argument for parameter arg1 of IHandler.perform.
						IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
						                                                                      ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:124: error: [argument] incompatible argument for parameter arg2 of IHandler.perform.
						IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
						                                                                            ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:251: error: [override.param] Incompatible parameter type for o.
	public boolean equals(Object o) {
	                             ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull RankProportionalSelector
    @Initialized @NonNull boolean equals(@Initialized @NonNull RankProportionalSelector this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
Note: ../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
